--- a/configs/config_dnar10.toml
+++ b/configs/config_dnar10.toml
@@ -1,6 +1,6 @@
 output_path = "/tmp/"
 target_yield = 100000000000
-pore_type = "R9"
+pore_type = "R10"
 nucleotide_type = "DNA"
 
 [parameters]
@@ -14,12 +14,12 @@ sample_rate = 4000
 
 [[sample]]
 name = "Bacteria 1"
-input_genome = "squiggle_arrs/NC_002516.2.squiggle.npy"
-mean_read_length = 20000
+input_genome = "/squiggle_arrs/mixed_ref.fa"
+mean_read_length = 1000
 weight = 1
 
-[[sample]]
-name = "Bacteria 2"
-input_genome = "squiggle_arrs/NC_003997.3.squiggle.npy"
-mean_read_length = 15000
-weight = 2
+# [[sample]]
+# name = "Bacteria 2"
+# input_genome = "docker/squiggle_arrs/mixed_ref.fa"
+# mean_read_length = 1500
+# weight = 2
